--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 	--tertiary-color-light: rgb(43, 47, 58);
 	--danger-color: #e15554;
 	--bg-color: #222831;
+	--bg-active-color: #1c2127;
 	--user-chat-color: #65cac3;
 }
 
@@ -25,21 +26,6 @@ body {
 	.App-logo {
 		animation: App-logo-spin infinite 20s linear;
 	}
-}
-
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-.App-link {
-	color: #61dafb;
 }
 
 body {
