--- a/src/pages/Feed/Feed.css
+++ b/src/pages/Feed/Feed.css
@@ -195,3 +195,30 @@
 	background-color: var(--bg-color);
 	color: var(--primary-color);
 }
+
+/********************************* */
+/** Media Queries                  *
+/********************************* */
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+	.Feed__List {
+		margin-top: 1rem;
+		margin-bottom: 0;
+	}
+	.Feed__List > .Post-Card {
+		padding: 2rem 2rem 1rem 2rem;
+	}
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+}
