--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -71,3 +71,17 @@
 .Modal .Modal-Full-Content {
 	margin-top: 6%;
 }
+
+/********************************* */
+/** Media Queries                  *
+/********************************* */
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+	.Modal .Modal-Content {
+		margin-top: 20%;
+	}
+	.AssignmentForm {
+		margin-top: 0;
+	}
+}
