--- a/src/pages/UserProfile/UserProfile.css
+++ b/src/pages/UserProfile/UserProfile.css
@@ -144,3 +144,10 @@
 		bottom: 1rem;
 	}
 }
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+	.UserProfile__Header {
+		width: 75vw;
+	}
+}
